src/yini_test/cases/golden/strict/valid/booleans-and-null/boolean-synonyms.strict.yini
@yini strict

^ Values
trueValue = true
falseValue = false
yesValue = yes
noValue = no
onValue = on
offValue = off

/END
