src/yini_test/cases/golden/strict/invalid/mixed-values/unsupported-value-token.strict.yini
@yini strict

^ Values
value = @unsupported

/END
